[project]
name = "toronto-open-data-mcp-server"
version = "0.2.0"
description = "MCP server for accessing Toronto Open Data through the CKAN API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Vince Duquette"}
]
keywords = ["mcp", "toronto", "open-data", "ckan", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
toronto-open-data-mcp-server = "main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/toronto-open-data-mcp-server"
"Bug Reports" = "https://github.com/yourusername/toronto-open-data-mcp-server/issues"
"Source" = "https://github.com/yourusername/toronto-open-data-mcp-server"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    ".",
    "tests"
]
markers = [
    "integration: marks tests as integration tests (may hit real API)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["main"]
omit = [
    "test_*.py",
    "*_test.py",
    "tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]